# sparrow-modular-2

./: .gitignore  .gitmodules  AGENTS.md
sparrow-modular-ocaml/: AGENTS.md  README.md  dune  dune-project  sparrow_modular_ocaml.opam
sparrow-modular-ocaml/doc/: effect-algebra-soundness.md  external-summary-effect-algebra.md  legacy-finite-slice.md  real-sparrow-lineage.md  sparrow-pe-status.md  traceability.md  verification.md
sparrow-modular-ocaml/doc/adr/: ADR-0001-real-sparrow-frontend-global-fork.md  ADR-0002-real-sparrow-preanalysis-pe.md  ADR-0003-real-sparrow-access-dug.md  ADR-0004-real-sparrow-sparse-fixpoint-pe.md  ADR-0005-real-sparrow-premerge-linked-observer.md  ADR-0005-real-sparrow-staged-linking-pe.md  ADR-0006-abstract-speculate-metaocaml-sparse-proof-gate.md  ADR-0007-external-summary-effect-algebra.md
sparrow-modular-ocaml/doc/adr/archive/: ADR-001-pipeline-shadow-vs-baseline-modification.md  ADR-002-interval-only-boundary.md  ADR-003-finite-subset-golden-fixture-contract.md  ADR-004-frontend-preanalysis-dug-boundary.md  ADR-005-residual-global-fixpoint-strategy.md
sparrow-modular-ocaml/doc/experiments/: abstract-speculate-residual-linking-pe.md  experiment-001-timeboxed-sparrow-lib-dependency-reuse.md  real-sparrow-access-dug-closure.md  real-sparrow-access-dug.md  real-sparrow-frontend-global.md  real-sparrow-preanalysis-closure.md  real-sparrow-preanalysis.md  real-sparrow-premerge-linked-observer-closure.md  real-sparrow-premerge-linked-observer.md  real-sparrow-sparse-fixpoint-pe-closure.md  real-sparrow-sparse-fixpoint-pe.md  real-sparrow-staged-linking-pe-closure.md  real-sparrow-staged-linking-pe.md
sparrow-modular-ocaml/src/: abstract_speculate_blind_equal.ml  abstract_speculate_effect_algebra.ml  abstract_speculate_effect_algebra.mli  abstract_speculate_effect_projection.ml  abstract_speculate_effect_projection.mli  abstract_speculate_effect_schema.ml  abstract_speculate_effect_schema.mli  abstract_speculate_global_residual_fixpoint.ml  abstract_speculate_itv_residual_cell.ml  abstract_speculate_itv_residual_cell.mli  abstract_speculate_lift.ml  abstract_speculate_meta_sparse.ml  abstract_speculate_pe.ml  abstract_speculate_residual_cycle_scheduler.ml  abstract_speculate_residual_cycle_scheduler.mli  abstract_speculate_residual_linker.ml  abstract_speculate_residual_memory_delta.ml  abstract_speculate_residual_memory_delta.mli  abstract_speculate_residual_relation.ml  abstract_speculate_residual_relation.mli  abstract_speculate_residual_scalar_call.ml  abstract_speculate_residual_scalar_call.mli  abstract_speculate_residual_solver.ml  abstract_speculate_residual_value.ml  abstract_speculate_stage2_input.ml  abstract_speculate_stage_types.ml  apiSem.ml  arrayBlk.ml  arrayBlk.mli  basicDom.ml  basicDom.mli  callGraph.ml  cases.ml  cilHelper.ml  cilHelper.mli  dug.ml  dug.mli  dune  global.ml  global.mli  (+32 more)
sparrow-modular-ocaml/src/legacy_finite_slice/: cases.ml  cli.ml  interval.ml  pipeline.ml  summary.ml
sparrow-modular-ocaml/test/: abstract_speculate_effect_algebra_unit.ml  abstract_speculate_itv_residual_cell_unit.ml  abstract_speculate_metaocaml_sparse_blind_equal.ml  abstract_speculate_metaocaml_sparse_forbidden_shortcuts.ml  abstract_speculate_metaocaml_sparse_module_boundary.ml  abstract_speculate_metaocaml_sparse_online_residuals.ml  abstract_speculate_metaocaml_sparse_shape_witness.ml  abstract_speculate_pe_audit.ml  abstract_speculate_pe_compare.ml  abstract_speculate_pe_dump.ml  abstract_speculate_residual_api_model_check.ml  abstract_speculate_residual_linking_oracle_suite_check.ml  abstract_speculate_residual_linking_oracle_suite_dump.ml  abstract_speculate_residual_linking_pe_check.ml  abstract_speculate_residual_linking_pe_dump.ml  abstract_speculate_residual_memory_delta_unit.ml  abstract_speculate_residual_scalar_call_unit.ml  abstract_speculate_residual_solver_unit.ml  abstract_speculate_staged_bta_fixpoint.ml  abstract_speculate_staged_lattice.ml  abstract_speculate_staged_transfer.ml  dune  real_sparrow_acceptance_audit.ml  real_sparrow_access_dug_audit.ml  real_sparrow_access_dug_compare.ml  real_sparrow_access_dug_dump.ml  real_sparrow_frontend_dump.ml  real_sparrow_frontend_global_compare.ml  real_sparrow_preanalysis_compare.ml  real_sparrow_preanalysis_dump.ml  real_sparrow_premerge_linked_observer_audit.ml  real_sparrow_premerge_linked_observer_compare.ml  real_sparrow_premerge_linked_observer_dump.ml  real_sparrow_sparse_fixpoint_pe_audit.ml  real_sparrow_sparse_fixpoint_pe_compare.ml  real_sparrow_sparse_fixpoint_pe_dump.ml  real_sparrow_staged_linking_pe_audit.ml  real_sparrow_staged_linking_pe_compare.ml  real_sparrow_staged_linking_pe_dump.ml  stage2_linker_runner.ml  (+3 more)
sparrow-modular-ocaml/test/fixtures/abstract_speculate_metaocaml_sparse/: dynamic_branch.c  dynamic_loop.c  module_local_main.c  module_local_sibling.c
sparrow-modular-ocaml/test/fixtures/abstract_speculate_pe/: all_static.c  cross_file_unresolved_main.c  direct_internal_call.c  extern_independent_static.c  external_global_read.c  known_dynamic_call.c  widening_loop.c
sparrow-modular-ocaml/test/fixtures/abstract_speculate_residual_api_model/: api_memcpy_importer.c  api_provider.c  api_strcpy_importer.c  api_strlen_importer.c
sparrow-modular-ocaml/test/fixtures/abstract_speculate_residual_linking_pe/: importer.c  provider.c
sparrow-modular-ocaml/test/fixtures/real_access_dug/: direct_internal_call.c  extern_dependent.c  extern_independent_static.c  interprocedural_return.c  local_global_memory.c
sparrow-modular-ocaml/test/fixtures/real_frontend/: globals.c  mod_a.c  mod_b.c  multi_function.c  (+2 more)
sparrow-modular-ocaml/test/legacy_finite_slice/: dug_artifact_audit.ml  interval_boundary_audit.ml  main_analysis_pe_runner.ml  meta_smoke.ml  modular_frontend_runner.ml  pipeline_dependency_audit.ml  preanalysis_pe_runner.ml  precision_hack_audit.ml  product_state_audit.ml  research_record_audit.ml  residual_global_fixpoint_runner.ml  residual_shape_audit.ml  stage2_linker_runner.ml  summary_roundtrip.ml  unsupported_frontend_audit.ml
(+64 files in other folders)
