(executables
 (names
  real_sparrow_frontend_dump
  real_sparrow_frontend_global_compare
  real_sparrow_acceptance_audit)
 (modes byte)
 (libraries compiler-libs.toplevel sparrow_modular_ocaml metaocaml dynlink yojson unix)
 (flags :standard -w -27-32-33-39-50))

(rule
 (alias real_sparrow_frontend_global)
 (targets real_sparrow_frontend_global.source-lineage-check.json real_sparrow_frontend_global.audit.json)
 (deps
  fixtures/real_frontend/single_function.c
  fixtures/real_frontend/multi_function.c
  fixtures/real_frontend/globals.c
  fixtures/real_frontend/unreachable_nodes.c
  fixtures/real_frontend/mod_a.c
  fixtures/real_frontend/mod_b.c
  ../doc/real-sparrow-lineage.md
  ../doc/adr/ADR-0001-real-sparrow-frontend-global-fork.md
  ../doc/experiments/real-sparrow-frontend-global.md)
 (action
  (progn
   (run ./real_sparrow_frontend_dump.bc --module fixtures/real_frontend/single_function.c --module fixtures/real_frontend/multi_function.c --module fixtures/real_frontend/globals.c --module fixtures/real_frontend/unreachable_nodes.c --module fixtures/real_frontend/mod_a.c --module fixtures/real_frontend/mod_b.c --out ../_build/real-sparrow/frontend-global/active)
   (run ./real_sparrow_frontend_dump.bc --module fixtures/real_frontend/single_function.c --module fixtures/real_frontend/multi_function.c --module fixtures/real_frontend/globals.c --module fixtures/real_frontend/unreachable_nodes.c --module fixtures/real_frontend/mod_a.c --module fixtures/real_frontend/mod_b.c --out ../_build/real-sparrow/frontend-global/source-lineage-reference)
   (run ./real_sparrow_frontend_global_compare.bc --active ../_build/real-sparrow/frontend-global/active --reference ../_build/real-sparrow/frontend-global/source-lineage-reference --report real_sparrow_frontend_global.source-lineage-check.json)
   (run ./real_sparrow_acceptance_audit.bc --repo-root .. --report real_sparrow_frontend_global.audit.json))))

(alias
 (name runtest)
 (deps (alias real_sparrow_frontend_global)))
